--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "dysis-server",
   "version": "0.1.1",
   "description": "Provides the API for the Dysis Extension",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
