--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.1",
   "description": "Provides the API for the Dysis Extension",
   "main": "src/server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
@@ -24,6 +25,7 @@
   },
   "homepage": "https://github.com/shoeferlin/dysis#readme",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
   },
   "devDependencies": {
