--- a/server/package.json
+++ b/server/package.json
@@ -26,7 +26,8 @@
   "homepage": "https://github.com/shoeferlin/dysis#readme",
   "dependencies": {
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "mongoose": "^6.3.4"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
