--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "mongoose": "^6.3.4"
+    "mongoose": "^6.3.4",
+    "npmlog": "^6.0.2"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
