--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/shoeferlin/dysis#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.4",
