--- a/server/package.json
+++ b/server/package.json
@@ -26,6 +26,7 @@
   "homepage": "https://github.com/shoeferlin/dysis#readme",
   "dependencies": {
     "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "mongoose": "^6.3.4",
