--- a/server/package.json
+++ b/server/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-validator": "^6.14.1",
     "mongoose": "^6.3.4",
     "npmlog": "^6.0.2"
   },
