--- a/server/package.json
+++ b/server/package.json
@@ -33,7 +33,8 @@
     "googleapis": "^103.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
-    "npmlog": "^6.0.2"
+    "npmlog": "^6.0.2",
+    "perspective-api-client": "^3.1.0"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
