--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/shoeferlin/dysis#readme",
   "dependencies": {
+    "axios": "^0.27.2",
     "cors": "^2.8.5",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
@@ -34,7 +35,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "npmlog": "^6.0.2",
-    "perspective-api-client": "^3.1.0"
+    "perspective-api-client": "^1.1.0"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
