--- a/server/package.json
+++ b/server/package.json
@@ -27,6 +27,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "count-array-values": "^1.2.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -35,7 +36,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "npmlog": "^6.0.2",
-    "perspective-api-client": "^1.1.0"
+    "perspective-api-client": "^1.1.0",
+    "sort-obj": "^1.0.0"
   },
   "devDependencies": {
     "eslint": "^8.16.0",
