--- a/server/example.env
+++ b/server/example.env
@@ -3,5 +3,6 @@ DEBUG="true"
 PORT="8080"
 MONGODB_URI="XXX"
 TOKEN_SECRET="XXX"
-ADMIN_USERNAME="XXX"
+ADMIN_USERNAME="admin"
 ADMIN_PASSWORD="XXX"
+GOOGLE_API_KEY="XXX"
