--- a/server/package.json
+++ b/server/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.27.2",
     "cors": "^2.8.5",
     "count-array-values": "^1.2.1",
+    "cross-blob": "^3.0.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
