--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -1,23 +1,22 @@
 {
-  "name": "react-chrome-extension",
-  "version": "1.0.0",
-  "description": "react chrome extension template",
+  "name": "dysis",
+  "version": "0.1.0",
+  "description": "Dysis Chrome Extension",
+  "author": "Simon Höferlin",
   "scripts": {
-    "start": "webpack --watch --progress --config webpack.dev.js",
+    "dev": "webpack --watch --progress --config webpack.dev.js",
     "build": "webpack --watch --progress --config webpack.prod.js"
   },
-  "author": "Simon Höferlin",
-  "license": "UNLICENSED",
   "devDependencies": {
-    "@types/chrome": "^0.0.134",
-    "@types/react": "^17.0.3",
-    "@types/react-dom": "^17.0.3",
+    "@types/chrome": "^0.0.181",
+    "@types/react": "^18.0.6",
+    "@types/react-dom": "^18.0.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
     "html-webpack-plugin": "^4.5.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "style-loader": "^2.0.0",
     "terser-webpack-plugin": "^5.1.1",
     "ts-loader": "^8.1.0",
@@ -25,8 +24,5 @@
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
     "webpack-merge": "^5.7.3"
-  },
-  "dependencies": {
-    "update": "^0.4.2"
   }
 }
