--- a/client-ts/src/static/manifest.json
+++ b/client-ts/src/static/manifest.json
@@ -2,6 +2,7 @@
   "name": "Dysis (TS)",
   "description": "The extension for order in general and natural justice",
   "version": "0.1.0",
+  "author": "Simon Höferlin",
   "manifest_version": 3,
   "icons": {
     "16": "icon.png",
@@ -21,7 +22,7 @@
   "content_scripts": [
     {
       "matches":["https://*.reddit.com/*"],
-      "js": ["contentScript.js"]
+      "js": ["Dysis.js"]
     }
   ]
 }
