--- a/client-ts/tsconfig.json
+++ b/client-ts/tsconfig.json
@@ -4,6 +4,6 @@
     "module": "es6",
     "target": "es6",
     "moduleResolution": "node",
-    "esModuleInterop": true,
+    "esModuleInterop": true
   }
 }
