--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.2.4",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
-    "webpack-merge": "^5.7.3"
+    "webpack-merge": "^5.7.3",
+    "axios": "^0.27.2"
   }
 }
