--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -58,6 +58,7 @@
     "eslint-plugin-promise": "^6.0.0",
     "nodemon": "^2.0.18",
     "ts-node": "^10.8.1",
+    "tsc": "^2.0.4",
     "tsc-watch": "^5.0.3",
     "typescript": "^4.7.4"
   }
