--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -39,7 +39,8 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
     "npmlog": "^6.0.2",
-    "perspective-api-client": "^1.1.0"
+    "perspective-api-client": "^1.1.0",
+    "sanitize-html": "^2.7.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
@@ -49,6 +50,7 @@
     "@types/logger": "^0.0.1",
     "@types/node": "^18.0.0",
     "@types/npmlog": "^4.1.4",
+    "@types/sanitize-html": "^2.6.2",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
