--- a/client-ts/package.json
+++ b/client-ts/package.json
@@ -11,6 +11,7 @@
     "@types/chrome": "^0.0.181",
     "@types/react": "^18.0.6",
     "@types/react-dom": "^18.0.2",
+    "axios": "^0.27.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^7.0.0",
     "css-loader": "^5.2.4",
@@ -23,7 +24,9 @@
     "typescript": "^4.2.4",
     "webpack": "^5.34.0",
     "webpack-cli": "^4.6.0",
-    "webpack-merge": "^5.7.3",
-    "axios": "^0.27.2"
+    "webpack-merge": "^5.7.3"
+  },
+  "dependencies": {
+    "upgrade": "^1.1.0"
   }
 }
