--- a/server-ts/package.json
+++ b/server-ts/package.json
@@ -8,7 +8,8 @@
     "start": "node dist/server.js",
     "dev": "tsc-watch --onSuccess \"nodemon dist/sever.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm tsc"
+    "build": "./node_modules/typescript/bin/tsc",
+    "buildDev": "npx tsc"
   },
   "repository": {
     "type": "git",
