--- a/archive/server/package.json
+++ b/archive/server/package.json
@@ -2,14 +2,12 @@
   "name": "dysis-server",
   "version": "0.1.1",
   "description": "Provides the API for the Dysis Extension",
-  "main": "dist/server.js",
+  "main": "src/server.js",
   "type": "module",
   "scripts": {
-    "start": "node dist/server.js",
-    "dev": "tsc-watch --onSuccess \"nodemon dist/sever.js\"",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "./node_modules/typescript/bin/tsc",
-    "buildDev": "npx tsc"
+    "start": "node src/server.js",
+    "dev": "nodemon src/server.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -28,9 +26,9 @@
   "homepage": "https://github.com/shoeferlin/dysis#readme",
   "dependencies": {
     "@tensorflow-models/toxicity": "^1.2.2",
-    "@types/mongodb": "^4.0.7",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
+    "count-array-values": "^1.2.1",
     "cross-blob": "^3.0.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
@@ -41,17 +39,9 @@
     "mongoose": "^6.3.4",
     "npmlog": "^6.0.2",
     "perspective-api-client": "^1.1.0",
-    "sanitize-html": "^2.7.0"
+    "sort-obj": "^1.0.0"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.2",
-    "@types/cors": "^2.8.12",
-    "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
-    "@types/logger": "^0.0.1",
-    "@types/node": "^18.0.0",
-    "@types/npmlog": "^4.1.4",
-    "@types/sanitize-html": "^2.6.2",
     "eslint": "^8.16.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-google": "^0.14.0",
@@ -59,10 +49,6 @@
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
-    "nodemon": "^2.0.18",
-    "ts-node": "^10.8.1",
-    "tsc": "^2.0.4",
-    "tsc-watch": "^5.0.3",
-    "typescript": "^4.7.4"
+    "nodemon": "^2.0.16"
   }
 }
