--- a/client/src/static/manifest.json
+++ b/client/src/static/manifest.json
@@ -22,8 +22,8 @@
   "content_scripts": [
     {
       "matches":["https://*.reddit.com/*"],
-      "js": ["Dysis.js"],
-      "css": ["DysisStyle.css"]
+      "js": ["contentScript.js"],
+      "css": ["contentScript.css"]
     }
   ]
 }
