--- a/server/package.json
+++ b/server/package.json
@@ -9,7 +9,8 @@
     "dev": "tsc-watch --onSuccess \"nodemon dist/sever.js\"",
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "./node_modules/typescript/bin/tsc",
-    "buildDev": "npx tsc"
+    "buildDev": "npx tsc",
+    "lint": "eslint --ignore-path .eslintignore --ext .js,.ts ."
   },
   "repository": {
     "type": "git",
@@ -31,7 +32,6 @@
     "@types/mongodb": "^4.0.7",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "cross-blob": "^3.0.1",
     "date-fns": "^2.28.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
@@ -52,14 +52,20 @@
     "@types/node": "^18.0.0",
     "@types/npmlog": "^4.1.4",
     "@types/sanitize-html": "^2.6.2",
-    "eslint": "^8.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "eslint": "^8.20.0",
     "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-import-resolver-typescript": "^3.3.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-n": "^15.2.0",
     "eslint-plugin-promise": "^6.0.0",
+    "i": "^0.3.7",
     "nodemon": "^2.0.18",
+    "npm": "^8.15.0",
     "ts-node": "^10.8.1",
     "tsc": "^2.0.4",
     "tsc-watch": "^5.0.3",
